--- a/apps/templates/snippets/sort_dropdown.html
+++ b/apps/templates/snippets/sort_dropdown.html
@@ -6,7 +6,7 @@
 <script src="{% static 'js/selectize.js' %}"></script>
 <footer class="pagination pagination-dropdown"> {# cheating: borrowing styles from eultheme pagination dropdown #}
     <section>
-        <h2 class="h4">Sort</h2>
+        <!--<h2 class="h4">Sort</h2>-->
             <label class="sr-only" for="select-page">Sort:</label>
             <select id="select-sort" class="select-sort" placeholder="Sort by...">
                 {% for i in sort_options %}
