--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h2 class='uk-heading-primary'>{{ page.page_title }}</h1>
 <h3>{{page.tagline}}</h2>
-<p class='uk-text-lead'>{{ page.paragraph }}</p>
+<p class='text-lead'>{{ page.paragraph }}</p>
 
 {% if page.layout == 'List' %}
 <div class="collectionswrapper">
