--- a/apps/templates/snippets/sort_dropdown.html
+++ b/apps/templates/snippets/sort_dropdown.html
@@ -15,7 +15,7 @@
                     </option>
                 {% endfor %}
             </select>
-            <a onclick="ascaddURL(this)" href=""><button>ASC</button></a><a onclick="descaddURL(this)" href=""><button>DESC</button></a>
+            <a onclick="ascaddURL(this)" href=""><button>&uarr;</button></a><a onclick="descaddURL(this)" href=""><button>&darr;</button></a>
             <p>
     </section>
 </footer>
