--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -27,20 +27,20 @@
 <h2>Featured Volume{{page.featured_volumes.all|length|pluralize}}</h2>
 <ol>
     {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
-  <li>
-    <div>
+  <li class="list">
+    <div><div id="grid"><div id="grid-image">
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
         <img src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
-      </a>
+      </a></div><div id="grid-metaforimage">
       <p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
 
-      <p>{{ volume.label }}</p>
-  </a></p>
-  <p>Author: {{volume.author}}</p>
-  <p>Date Published: {{volume.published_date}}</p>
-  <p>Added {{volume.created_at}}</p>
-    </div>
+      <p>{{ volume.label|truncatechars:200 }}</p>
+  </a><br/>
+  Author: {{volume.author|truncatechars:100}}<br/>
+  Date Published: {{volume.published_date}}<br/>
+  Added {{volume.created_at}}</p>
+    </div></div></div>
   </li>
   {% endfor %}
 </ol>
@@ -74,9 +74,9 @@
       </a></div><div id="grid-metaforimage">
       <p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-      <p>{{ volume.label }}</p>
+      <p>{{ volume.label|truncatechars:200 }}</p>
   </a>
-  Author: {{volume.author}}<br/>
+  Author: {{volume.author|truncatechars:150}}<br/>
   Date Published: {{volume.published_date}}<br/>
   Added {{volume.created_at}}</p></div>
     </div></div>
