--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -21,9 +21,9 @@
       </a>
       <div id="innerContent"><p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-      <p>{{ volume.label }}</p>
+      <p>{{ volume.label|truncatechars:200 }}</p>
   </a></p>
-  <p><em>Author:</em> {{volume.author}}<br/>
+  <p><em>Author:</em> {{volume.author|truncatechars:150}}<br/>
   <em>Date Published:</em> {{volume.published_date}}<br/>
   Added {{volume.created_at}}</p></div>
     </div></div>
@@ -41,9 +41,9 @@
       </a></div><div id="grid-metaforimage">
       <p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-      {{ volume.label }}
+      {{ volume.label|truncatechars:200 }}
   </a><br/>
-  Author: {{volume.author}}<br/>
+  Author: {{volume.author|truncatechars:150}}<br/>
   Date Published: {{volume.published_date}}<br/>
   Added {{volume.created_at}}</p></div>
     </div></div>
