--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -28,9 +28,9 @@
 <ol>
     {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
   <li class="list">
-    <div><div id="grid"><div id="grid-image">
+    <div><div id="grid"><div id="grid-image-volume">
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-        <img src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
+        {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img src="{{ canvas.thumbnail }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail }}"{% endif %}{% endfor %} alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
       </a></div><div id="grid-metaforimage">
       <p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
@@ -68,9 +68,9 @@
 <ol>
   {% for volume in page.volumes %}
   <li class="list">
-    <div><div id="grid"><div id="grid-image">
+    <div><div id="grid"><div id="grid-image-volume">
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-        {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img src="{{ canvas.thumbnail_crop_tallwide }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}"{% endif %}{% endfor %}alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
+        {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img src="{{ canvas.thumbnail }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail }}"{% endif %}{% endfor %}alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
       </a></div><div id="grid-metaforimage">
       <p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
