--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -73,7 +73,7 @@
 
     <div>
 
-      <nav class="uk-navbar-container" uk-navbar uk-sticky>
+      <nav class="uk-navbar-container" uk-navbar uk-sticky id="rx-nav">
         <div class="uk-navbar-left">
           <a class="uk-navbar-item uk-logo" href="/">Readux</a>
           <ul class="uk-navbar-nav">
