beautify volumes page

--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -15,7 +15,7 @@
     <div class="rx-title-tagline">{{page.tagline}}</div>
   </div>
 
-  <p class="text-lead">{{ page.paragraph }}</p>
+  <p>{{ page.paragraph }}</p>
 </div>
 
 {% if page.layout == 'Banner' %}
