--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -517,9 +517,10 @@ ol {
 }
 
 .readux-card-title {
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: 700;
     color: #707070;
+    line-height: 1.25em;
 }
 
 a:hover {
